--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="st-hero-text">
           <h3>Hello, I’m</h3>
-          <h1>Hafil <br>Muhammed
+          <h1>Hafi <br>Muhammed
           </h1>
           <h2>Visual Designer, Marketing Strategist</h2>
           <div class="st-hero-btn">
