--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="st-hero-text">
           <h3>Hello, I’m</h3>
-          <h1>Hafi <br>Muhammed
+          <h1>Hafil <br>Muhammed
           </h1>
           <h2>Visual Designer, Marketing Strategist</h2>
           <div class="st-hero-btn">
@@ -79,20 +79,22 @@
       <div class="st-social-group wow fadeInLeft">
         <div class="st-social-link">
           <a href="#" class="st-social-btn active">
-            <span class="st-social-icon"><i class="fab fa-dribbble"></i></span>
-            <span class="st-icon-name">Youtube</span>
+            <span class="st-social-icon"><i class="fab fa-instagram"></i></span>
+            <span class="st-icon-name">Instagram</span>
           </a>
           <a href="#" class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-behance"></i></span>
             <span class="st-icon-name">Behance</span>
           </a>
-          <a href="#" class="st-social-btn">
-            <span class="st-social-icon"><i class="fab fa-twitter"></i></span>
-            <span class="st-icon-name">Twitter</span>
-          </a>
+          
           <a href="#" class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
             <span class="st-icon-name">LinkedIn</span>
+          </a>
+
+          <a href="#" class="st-social-btn">
+            <span class="st-social-icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
+            <span class="st-icon-name">Thakkol</span>
           </a>
         </div>
       </div>
