--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="st-social-link">
           <a href="#" class="st-social-btn active">
             <span class="st-social-icon"><i class="fab fa-instagram"></i></span>
-            <span class="st-icon-name">Instagram</span>
+            <span class="st-icon-name">Insta</span>
           </a>
           <a href="#" class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-behance"></i></span>
