--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
     </div>
     <div class="st-height-b100 st-height-lg-b80"></div>
   </section>
-  <!-- End Contact Seciton -->
+  <!-- End Contact Seciton  hd -->
 
   <!-- Start Footer Seciton -->
   <footer>
