--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <span class="st-icon-name">Behance</span>
           </a>
           
-          <a href="https://www.linkedin.com/in/hafil-muhammed-76a68720a" target="_blank" class="st-social-btn">
+          <a href="https://linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=hafilmuhammed" target="_blank" class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
             <span class="st-icon-name">LinkedIn</span>
           </a>
@@ -690,7 +690,7 @@
                   <span class="st-icon-name">Behance</span>
                 </a>
 
-                <a href="https://www.linkedin.com/in/hafil-muhammed-76a68720a" target="_blank" class="st-social-btn">
+                <a href="https://linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=hafilmuhammed" target="_blank" class="st-social-btn">
                   <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
                   <span class="st-icon-name">LinkedIn</span>
                 </a>
